--- a/l1.html
+++ b/l1.html
@@ -30,14 +30,12 @@
 	<h1>ЗАГОЛОВОК (если есть), если нет, h1 теги убираешь или оставляешь пустые</h1>
 	<h2>ПОДЗАГОЛОВОК (если есть), если нет, h2 теги убираешь или оставляешь пустые</h2>
 	
-	<pre style="font-size: 100%;     font-family: 'PT Serif', serif;   color: #72614d; text-align: left;"> 
-Модель изготовлена для императора Александра II по одному из вариантов проектного чертежа. В Центральный военно-морской музей модель поступила в 1925 г. из Музея бывшего Морского корпуса. 
-«Паллада» была заложена 2 ноября 1831 г. на Охтинской верфи как 44-пушечный по проекту, а фактически как 52-пушечный фрегат, строитель – В.Ф. Стоке. Корабль спущен на воду 1 сентября 1832 г. Первым командиром «Паллады» стал П.С. Нахимов. В октябре 1852 г. фрегат вышел из Кронштадта с целью доставить в Японию миссию вице-адмирала Е.В. Путятина, задачей которого являлось заключение торгового трактата между Россией и Японией. Корабль зашел в Нагасаки 10 августа 1853 г. Фрегат был затоплен в Императорской гавани 31 января 1856 г. 
-Модельный мастер Иван Егорович Егоров родился 13 ноября 1792 г. в Казанской губернии. Воспитывался в Казанском военно-сиротском заведении. В возрасте четырнадцати лет был определен в Кронштадтское училище флотских мастеровых, где в течение трех последующих лет учился плотницкому мастерству. В 1809 г. он был отобран корабельным мастером В.Ф. Стоке из числа юнг для обучения модельному делу. С этого момента судомоделизм становится делом жизни И.Е. Егорова, которому он посвятил последующие 67 лет. 
-И.Ф. Лихачев, являясь воспитанником Морского кадетского корпуса в Петербурге, принимал участие в практических плаваниях гардемарин на фрегате «Паллада».
-
-
-</pre>
+	<p style="font-size: 100%;     font-family: 'PT Serif', serif;   color: #72614d; text-align: left;"> 
+Модель изготовлена для императора Александра II по одному из вариантов проектного чертежа. В Центральный военно-морской музей модель поступила в 1925 г. из Музея бывшего Морского корпуса. </p>
+<p style="font-size: 100%;     font-family: 'PT Serif', serif;   color: #72614d; text-align: left;"> «Паллада» была заложена 2 ноября 1831 г. на Охтинской верфи как 44-пушечный по проекту, а фактически как 52-пушечный фрегат, строитель – В.Ф. Стоке. Корабль спущен на воду 1 сентября 1832 г. Первым командиром «Паллады» стал П.С. Нахимов. В октябре 1852 г. фрегат вышел из Кронштадта с целью доставить в Японию миссию вице-адмирала Е.В. Путятина, задачей которого являлось заключение торгового трактата между Россией и Японией. Корабль зашел в Нагасаки 10 августа 1853 г. Фрегат был затоплен в Императорской гавани 31 января 1856 г. </p>
+<p style="font-size: 100%;     font-family: 'PT Serif', serif;   color: #72614d; text-align: left;"> Модельный мастер Иван Егорович Егоров родился 13 ноября 1792 г. в Казанской губернии. Воспитывался в Казанском военно-сиротском заведении. В возрасте четырнадцати лет был определен в Кронштадтское училище флотских мастеровых, где в течение трех последующих лет учился плотницкому мастерству. В 1809 г. он был отобран корабельным мастером В.Ф. Стоке из числа юнг для обучения модельному делу. С этого момента судомоделизм становится делом жизни И.Е. Егорова, которому он посвятил последующие 67 лет.</p> 
+<p style="font-size: 100%;     font-family: 'PT Serif', serif;   color: #72614d; text-align: left;"> И.Ф. Лихачев, являясь воспитанником Морского кадетского корпуса в Петербурге, принимал участие в практических плаваниях гардемарин на фрегате «Паллада».
+</p>
 	
 
 	
