--- a/25.html
+++ b/25.html
@@ -34,7 +34,7 @@
 	
 
 <h1>
-Святой Николай Можайский, с житием в 12 клеймах 
+Святой Николай Можайский, с житием в 12 клеймах
 </h1>	
 
 
@@ -44,7 +44,8 @@
 
 
 <p>
-Изображение в среднике иконы воспроизводит деревянный скульптурный образ Николая Чудотворца в Никольском соборе Можайска, а также его киот
+Изображение в среднике иконы воспроизводит деревянный скульптурный образ Николая Чудотворца в Никольском соборе Можайска, а также его киот.
+
 
 </p>
 
