--- a/26.html
+++ b/26.html
@@ -35,8 +35,8 @@
 
 <h1>
 Симон Ушаков.
-Икона. Богоматерь Владимирская
- 
+Богоматерь Владимирская
+
 </h1>	
 
 
@@ -47,8 +47,9 @@
 
 <p>
 Надпись внизу иконы: «Лета 170 году писал сии образ зограф Пимин зовомыи Симон Феодоров сын Ушаков в монастырь Стретения чюдотворныя ея иконы Владимерския пресвятыя Богородицы по обещанию игумена Деонисия того же монастыря». <br>
-Симон Ушаков (1626–1686) – жалованный иконописец Оружейной палаты, с именем которого связано изменение художественного языка русской иконописи, наделение иконы приметами парсуны. Он родился, вероятнее всего, в Москве, происходил из дворянского сословия, с 1648 г. и до своей смерти служил царским изографом, занимаясь организацией художественных работ, создавая иконы, подготовительные рисунки для гравюр и портреты. Тема Богоматери Владимирской – защитницы Московского царства – наряду со «Спасом Нерукотворным» является одной из ведущих в творчестве Симона Ушакова. Икона из коллекции Н. П. Лихачева написана «в меру и подобие» чудотворного образа «Богоматери Владимирской» первой трети XII в. (ГТГ) – святыни московского Успенского собора, которой поклонялись государи во время чина венчания на царство. В надписи на иконе 1662 г. сообщается дата создания, имена ктитора и исполнителя. Сретенский монастырь, откуда происходит произведение Симона Ушакова, был основан в память о встрече иконы Богоматери Владимирской в 1395 г., когда принесенный из Владимира древний образ спас столицу от нашествия Тамерлана. Игумен монастыря Дионисий неоднократно заказывал Симону Ушакову иконы для своей обители. В подписях на иконах Симон Ушаков нередко указывал имя, полученное им в крещении (он был крещен в честь преподобного Пимена Великого). Наиболее ранняя подпись, в которой упомянуты оба имени иконописца, содержится на иконе «Богоматери Владимирской» 1662 г. <br>
+Симон Ушаков (1626–1686) – жалованный иконописец Оружейной палаты, с именем которого связано изменение художественного языка русской иконописи, наделение иконы приметами парсуны. Он родился, вероятнее всего, в Москве, происходил из дворянского сословия, с 1648 г. и до своей смерти служил царским изографом, занимаясь организацией художественных работ, создавая иконы, подготовительные рисунки для гравюр и портреты. Тема Богоматери Владимирской – защитницы Московского царства – наряду со «Спасом Нерукотворным» является одной из ведущих в творчестве Симона Ушакова. Икона из коллекции Н.П. Лихачева написана «в меру и подобие» чудотворного образа «Богоматери Владимирской» первой трети XII в. (ГТГ) – святыни московского Успенского собора, которой поклонялись государи во время чина венчания на царство. В надписи на иконе 1662 г. сообщается дата создания, имена ктитора и исполнителя. Сретенский монастырь, откуда происходит произведение Симона Ушакова, был основан в память о встрече иконы Богоматери Владимирской в 1395 г., когда принесенный из Владимира древний образ спас столицу от нашествия Тамерлана. Игумен монастыря Дионисий неоднократно заказывал Симону Ушакову иконы для своей обители. В подписях на иконах Симон Ушаков нередко указывал имя, полученное им в крещении (он был крещен в честь преподобного Пимена Великого). Наиболее ранняя подпись, в которой упомянуты оба имени иконописца, содержится на иконе «Богоматери Владимирской» 1662 г. <br>
 (П. Западалова)
+
 
 </p>
 
