--- a/27.html
+++ b/27.html
@@ -35,7 +35,7 @@
 
 <h1>
 Притча о хромце и слепце
- 
+
 </h1>	
 
 
@@ -46,8 +46,10 @@
 
 <p>
 Икона является частью боковых – северных, врат иконостаса неизвестного крупного храма. По предположению И.А. Шалиной, это был собор Рождества Богородицы Антониева монастыря в Великом Новгороде. В собрании Русского музея хранятся еще два фрагмента – «спилка» этих врат с образами «Видение Евлогия» и «Видение Лествицы святым Иоанном Лествичником», которые также поступили в музей из коллекции Н.П. Лихачева. Эти произведения, наряду с большой группой рукописей, икон и изделий среброделия, отражают работу мастеров, трудившихся на протяжении 1530–1540-х гг. в новгородских мастерских архиепископа Макария. <br>
-Композиция восходит к сочинению Кирилла Туровского (1130–1182) «Притча о человечестей души и о телеси, и о преступлении Божия заповеди, и о воскресении телесе человеча, и о будущем суде…» (БЛДР. Т. 4. С. 142–159). В ней повествуется о хромце и слепце, нанятых сторожить сад (рай) и нарушивших запрет хозяина (Бога), за что были изгнаны из врат и представлены перед судом Всевышнего. Поскольку «хромецъ есть тело человече, а слепецъ есть душа», Кирилл Туровский так говорит о сокровенном смысле обоих образов: «Створи Бог тело вне рая и внесе е в эдемъ, а не в рай... Рай бо место есть свято, яко же церкви олтарь. Церкви бо всем входна». Врата, охраняемые слепцом и хромцом, символизируют то же, что и двери, отделяющие недоступный алтарь (рай) от наоса церкви (Эдема). Ограда и стены сада, согласно Кириллу, символизируют страх Божий, его законы и заповеди. Входом, «незапертыми вратами» Рая (или открытыми вратами сада, насажденного хозяином) были Древо познания, послушание и смирение, которые и нарушили сначала Адам и Ева, а потом хромец и слепец, подобно им наказанные и изгнанные за это из сада – Эдема–Рая. Воспроизведение на дверях жертвенника сразу двух композиций – сцены создания первых людей и притчи – переносил на неё и весь символизм «незатворенных» врат, как образа божественного Творения и его познания, страха и закона Божьего. <br>
+Композиция восходит к сочинению Кирилла Туровского (1130–1182) «Притча о человечестей души и о телеси, и о преступлении Божия заповеди, и о воскресении телесе человеча, и о будущем суде…» (БЛДР. Т. 4. С. 142–159). В ней повествуется о хромце и слепце, нанятых сторожить сад (рай) и нарушивших запрет хозяина (Бога), за что были изгнаны из врат и представлены перед судом Всевышнего. Поскольку «хромецъ есть тело человече, а слепецъ есть душа», Кирилл Туровский так говорит о сокровенном смысле обоих образов: «Створи Бог тело вне рая и внесе е в эдемъ, а не в рай... Рай бо место есть свято, яко же церкви олтарь. Церкви бо всем входна». Врата, охраняемые слепцом и хромцом, символизируют то же, что и двери, отделяющие недоступный алтарь (рай) от наоса церкви (Эдема). Ограда и стены сада, согласно Кириллу, символизируют страх Божий, его законы и заповеди. Входом, «незапертыми вратами» Рая (или открытыми вратами сада, насажденного хозяином) были Древо познания, послушание и смирение, которые и нарушили сначала Адам и Ева, а потом хромец и слепец, подобно им наказанные и изгнанные за это из сада – Эдема–Рая. Воспроизведение на дверях жертвенника сразу двух композиций – сцены создания первых людей и притчи – переносил на нее и весь символизм «незатворенных» врат, как образа божественного Творения и его познания, страха и закона Божьего. <br>
 (И. Шалина)
+
+
 
 </p>
 
