--- a/19.html
+++ b/19.html
@@ -46,7 +46,10 @@
 <p>
 Утраты грунта на верхнем и нижнем полях; значительные потертости и утраты красочного слоя; многочисленные отверстия от гвоздей. <br>
 Апостол Иоанн Богослов представлен прямолично, по пояс. Он благословляет правой рукой и придерживает на левом колене объемный, богато декорированный кодекс. Пропорции иконы и ее иконография позволяют предположить, что она могла быть частью обширного деисусного чина, центральное ядро которого обрамляли образы апостолов. Нельзя исключить, что икона могла быть местным образом неизвестного храма, о чем свидетельствуют обильные следы крепления оклада на ее фоне и нимбе святого. <br>
-Г. В. Попов атрибутирует икону тверской иконописной школе, отметив, вместе с тем, заметные стилистические черты балканской живописи. Именно на Балканах в XIV–XV вв. имели распространение поясные прямоличные деисусные чины. В качестве иконографических источников образа апостола Иоанна Богослова Г. В. Попов приводит также изображения Спаса Вседержителя на престоле и фигуры восседающих апостолов в сценах «Страшный Суд» (Г. В. Попов, А. В. Рындина. Живопись и прикладное искусство Твери. XIV–XVI века. М., 1979. С. 186–189. Кат. 21) думаю, что стоит оставить
+Г.В. Попов атрибутирует икону тверской иконописной школе, отметив, вместе с тем, заметные стилистические черты балканской живописи. Именно на Балканах в XIV–XV вв. имели распространение поясные прямоличные деисусные чины. В качестве иконографических источников образа апостола Иоанна Богослова Г.В. Попов приводит также изображения Спаса Вседержителя на престоле и фигуры восседающих апостолов в сценах «Страшный Суд» (Г.В. Попов, А.В. Рындина. Живопись и прикладное искусство Твери. XIV–XVI века. М., 1979. С. 186–189. Кат. 21).
+
+
+
 
 </p>
 
