--- a/24.html
+++ b/24.html
@@ -34,7 +34,7 @@
 	
 
 <h1>
-Преподобный Савва Сторожевский, в житии 
+Преподобный Савва Сторожевский, в житии
 </h1>	
 
 
@@ -44,9 +44,11 @@
 
 
 <p>
-Один из самых известных русских святых, подвижник и чудотворец, преподобный Савва прославился как великий молитвенник, покровитель царей, защитник Москвы, целитель, прозорливец. Он был в числе первых постриженников, учеников и последователей Сергия Радонежского.
+Один из самых известных русских святых, подвижник и чудотворец, преподобный Савва прославился как великий молитвенник, покровитель царей, защитник Москвы, целитель, прозорливец. Он был в числе первых постриженников, учеников и последователей Сергия Радонежского. <br>
 Еще в ранней юности Савва ушел от мира и принял постриг в Троице-Сергиевом монастыре, где после смерти преподобного Сергия стал игуменом. В течение шести лет он успешно управлял крупнейшим из русских монастырей, совершив в нем немало чудес. Как духовник князя Юрия Дмитриевича Звенигородского, Савва благословил его на поход в Волжскую Булгарию и предсказал победу над врагами. По просьбе того же князя и стремясь к уединению, он ушел в Звенигород и в 1396–1398 гг. основал недалеко от города, на горе Стороже новую обитель в честь Рождества Богородицы, где ввел общежительный устав преподобного Сергия. Местное почитание Саввы Сторожевского установилось еще в XV в.: от его мощей совершалось много чудес. Официальное общерусское празднование установлено в 1547 г. на московском Соборе. Нетленные мощи святого обретены в 1652 г. при царе Алексее Михайловиче, особенно чтившем чудотворца и неоднократно ходившем пешком на поклонение в обитель преподобного. Благодаря его вниманию монастырь был обновлен, окружен мощными крепостными стенами, в нем были возведены многочисленные каменные храмы и палаты, богато украшенные росписью, иконами, литургической утварью и книгами. <br>
 Дни памяти 3/16 декабря, 19 января /1 февраля.
+
+
 
 </p>
 
