--- a/24.html
+++ b/24.html
@@ -39,6 +39,21 @@
 
 
 <h2>
+ПОРЯДОК КЛЕЙМ:
+Слева направо: 
+1. Пострижение преподобного Саввы во иноческий образ; 
+2. Преподобный Сергий Радонежский благословляет Савву идти «в пустынь на Сторожъ»; 
+3. Преподобный Савва благословляет князя Георгия (Юрия Дмитриевича Звенигородского) «на рать»; 
+4. Преставление преподобного Саввы; 
+5. Явление преподобного Саввы игумену Дионисию с повелением написать его образ. Дионисий пишет первую икону Саввы; 
+6. Исцеление беснующегося у раки преподобного Саввы; 
+7. Исцеление слепого инока у раки) преподобного Саввы; 
+8. Чудо о разбойниках, намеревавшихся ограбить церковь; 
+9. Исцеление преподобным Саввой жены, «мучимой от беса»; 
+10. Исцеление преподобным Саввой боярского сына Иоанна Ртищева – Георгия;
+11. Исцеление преподобным Саввой игумена Мисаила; 
+12. Исцеление преподобным Саввой боярского сына Даниила.
+
 
 </h2>
 
