--- a/25.html
+++ b/25.html
@@ -39,6 +39,19 @@
 
 
 <h2>
+ПОРЯДОК КЛЕЙМ:
+1. Рождество; 
+2. Крещение (в изводе «Чудо в купели»); 
+3. Исцеление сухорукой жены; 
+4. Приведение во учение;
+5. Поставление в диаконы; 
+6. Поставление в епископы; 
+7. Явление царю Константину во сне; 
+8. Явление трем мужам в темнице; 
+9. Спасение Димитрия со дна моря;
+10. Возвращение Василия Агрикова сына родителям; 
+11. Положение во гроб; 
+12. Перенесение мощей.
 
 </h2>
 
